z001 - cambio de letra a mayuscula

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <div class="hero">
-        <h1>Zooxial <span style="color: #ffff;">your best Friend</span></h1>
+        <h1>Zooxial <span style="color: #ffff;">Your best Friend</span></h1>
         <p>Cuz your best friend is also our best friend.</p>
 
         <div class="form">
