--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
         <div>Zooxial</div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pets</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Veterinarias</a></li>
+                <li><a href="#">Veterinarios</a></li>
+                <li><a href="#">Alimentos</a></li>
+                <li><a href="#">Accesorios</a></li>
+                <li><a href="#">Alertas</a></li>
+                <li><a href="#">Mis mascotas</a></li>
             </ul>
         </nav>
     </header>
     <div class="hero">
-        <h1>Zooxial <span style="color: #ffff;">Your best Friend</span></h1>
-        <p>Cuz your best friend is also our best friend.</p>
+        <h1>Zooxial conectando mascotas con el mejor cuidado.</h1>
 
         <div class="form">
             <select>
@@ -45,24 +44,28 @@
     </div>
     <section class="services">
         <div class="service">
-            <h3>Medical treatment for disorders</h3>
+            <h3>Veterinarias</h3>
             <p>Modern medicine has made dogs' lives much more pleasant, and longer for sure.</p>
         </div>
         <div class="service">
-            <h3>Broken bone & its treatment</h3>
+            <h3>Veteriarios</h3>
             <p>How often should your dog have a routine physical exam? More often than you think.</p>
         </div>
         <div class="service">
-            <h3>Treatment for heart diseases</h3>
+            <h3>Alimentos</h3>
             <p>Here are tips on finding the right veterinarian for you.</p>
         </div>
         <div class="service">
-            <h3>Grooming & beauty care for pets</h3>
+            <h3>Accesorios</h3>
             <p>In this section we cover many facets of pet grooming.</p>
         </div>
         <div class="service">
-            <h3>Vaccination for your pets</h3>
+            <h3>Alertas</h3>
             <p>We are prepared to ensure your pets stay healthy and protected.</p>
+        </div>
+        <div class="service">
+            <h3>Mis Mascostas</h3>
+            <p>In this section we cover many facets of pet grooming.</p>
         </div>
     </section>
 
